# robomixer

./: .gitignore  CLAUDE.md  pyproject.toml
src/robomixer/: __init__.py  config.py
src/robomixer/analysis/: __init__.py  cloud.py  pipeline.py  transition_points.py
src/robomixer/api/: app.py
src/robomixer/api/routes/: songs.py  transitions.py
src/robomixer/cli/: main.py  metadata.py
src/robomixer/models/: __init__.py  song.py  training.py  transition.py
src/robomixer/scoring/: __init__.py  embedding.py  heuristic.py
src/robomixer/storage/: __init__.py  db.py  features.py  index.py
src/robomixer/training/: __init__.py  dataset.py  track_id.py  tracklists.py  train_embedding.py  train_scorer.py  youtube.py
tests/unit/: test_heuristic_scoring.py
